add work section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="landing-page">
-        <h1>hi, I'm Ammaar</h1>
+        <h1>hi, i'm Ammaar</h1>
     </div>
     <div class="description-section">
         <div class="intro-text">
@@ -20,10 +20,50 @@
     </div>
     <div class="work-section">
         <h2>my work</h2>
-        <div class="work-card">Work A</div>
-        <div class="work-card">Work B</div>
-        <div class="work-card">Work C</div>
-        <div class="work-card">Work D</div>
+        <div class="work-card">
+            <div class="work-card-header">
+                <div class="work-title">Co-Founder @ Brokol</div>
+                <div class="work-date">Jan 2023 - Present</div>
+            </div>
+            <ul class="work-details">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+            </ul>
+        </div>
+        <div class="work-card">
+            <div class="work-card-header">
+                <div class="work-title">Work B</div>
+                <div class="work-date">Feb 2022 - Dec 2022</div>
+            </div>
+            <ul class="work-details">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+            </ul>
+        </div>
+        <div class="work-card">
+            <div class="work-card-header">
+                <div class="work-title">Work C</div>
+                <div class="work-date">Mar 2021 - Jan 2022</div>
+            </div>
+            <ul class="work-details">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+            </ul>
+        </div>
+        <div class="work-card">
+            <div class="work-card-header">
+                <div class="work-title">Work D</div>
+                <div class="work-date">Apr 2020 - Feb 2021</div>
+            </div>
+            <ul class="work-details">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+            </ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
