--- a/index.html
+++ b/index.html
@@ -14,54 +14,56 @@
         <div class="intro-text">
             <h2>my elevator intro...</h2>
             <p>
-                I'm passionate about solving meaningful problems and making a positive impact through technology. A self starter that loves collaborating! (at least this what I like to think of myself as...)
+                I'm passionate about solving meaningful problems and making a positive impact through technology. A self starter that loves collaborating! (at least this what I like to think of myself as...) I have a strong technical background with Full Stack developer experience and proficiency in JavaScript, Python and Java.
             </p>
         </div>
     </div>
     <div class="work-section">
-        <h2>my work</h2>
+        <h2>my work!</h2>
         <div class="work-card">
             <div class="work-card-header">
                 <div class="work-title">Co-Founder @ Brokol</div>
-                <div class="work-date">Jan 2023 - Present</div>
+                <div class="work-date">Nov '22 - Present</div>
             </div>
             <ul class="work-details">
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+                <li>On a mission to reduce household food waste</li>
+                <li>Helping ADHDers with their relationship with food</li>
+                <li>Previous idea's beta mobile app gained 350+ user sign ups organically (idea didn't work but learnings were worth it)</li>
+                <a href="src/brokol.html" class="read-more-link">Read the story</a>
             </ul>
         </div>
         <div class="work-card">
             <div class="work-card-header">
-                <div class="work-title">Work B</div>
-                <div class="work-date">Feb 2022 - Dec 2022</div>
+                <div class="work-title">Full Stack Developer Co-op @ CGI</div>
+                <div class="work-date">Jan '24 - August '24</div>
             </div>
             <ul class="work-details">
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+                <li>BC Education and Child Care (ECC) Team</li>
+                <li>4 months in full stack development</li>
+                <li>4 months in QA in Agile team of 40</li>
             </ul>
         </div>
         <div class="work-card">
             <div class="work-card-header">
-                <div class="work-title">Work C</div>
-                <div class="work-date">Mar 2021 - Jan 2022</div>
+                <div class="work-title">Software Team @ Marine Design Club</div>
+                <div class="work-date">June '23 - Present</div>
             </div>
             <ul class="work-details">
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+                <li>Founding team & former software lead at Marine Design Club</li>
+                <li>Building an autonomous underwater vehicle to compete at Robosub</li>
+                <li>Working on ML model to detect objects underwater</li>
             </ul>
         </div>
         <div class="work-card">
             <div class="work-card-header">
-                <div class="work-title">Work D</div>
-                <div class="work-date">Apr 2020 - Feb 2021</div>
+                <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
+                <div class="work-date">Jan '24</div>
             </div>
             <ul class="work-details">
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+                <li>Built a parking tracker that provides real-time monitoring using a live camera feed</li>
+                <li>Integrated with a user-facing mobile app, updating graphical map in real-time</li>
+                <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
+                <a href="src/details.html" class="read-more-link">Read the story</a>
             </ul>
         </div>
     </div>
