--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     </div>
     <div class="description-section">
         <div class="intro-text">
+            <audio id="background-music" src="lift.mp3"></audio>
+            <button id="play-button">Click here for an enhanced viewing experience</button>
             <h2>my elevator intro...</h2>
             <p>
-                I'm passionate about solving meaningful problems and making a positive impact through technology. A self starter that loves collaborating! (at least this what I like to think of myself as...) I have a strong technical background with Full Stack developer experience and proficiency in JavaScript, Python and Java.
+                I'm passionate about solving meaningful problems and making a positive impact through technology. A self starter that loves collaborating! I have a strong technical background with Full Stack developer experience and proficiency in JavaScript, Python and Java. Interested in a career in product management or entrepreneurship. I'm currently building Brokol, a startup on a mission to reduce household food waste.
             </p>
         </div>
     </div>
