apply prettier formatting

--- a/index.html
+++ b/index.html
@@ -1,74 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ammaar's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="landing-page">
-        <h1>hi, i'm Ammaar</h1>
+      <h1>hi, i'm Ammaar</h1>
     </div>
     <div class="description-section">
-        <div class="intro-text">
-            <audio id="background-music" src="lift.mp3"></audio>
-            <button id="play-button">Click here for an enhanced viewing experience</button>
-            <h2>my elevator intro...</h2>
-            <p>
-                I'm passionate about solving meaningful problems and making a positive impact through technology. A self starter that loves collaborating! I have a strong technical background with Full Stack developer experience and proficiency in JavaScript, Python and Java. Interested in a career in product management or entrepreneurship. I'm currently building Brokol, a startup on a mission to reduce household food waste.
-            </p>
-        </div>
+      <div class="intro-text">
+        <audio id="background-music" src="lift.mp3"></audio>
+        <button id="play-button">
+          click here for an enhanced viewing experience
+        </button>
+        <h2>my elevator intro...</h2>
+        <p>
+          I'm passionate about solving meaningful problems and making a positive
+          impact through technology. A self starter that loves collaborating! I
+          have a strong technical background with Full Stack developer
+          experience and proficiency in JavaScript, Python and Java. Interested
+          in a career in product management or entrepreneurship. I'm currently
+          building Brokol, a startup on a mission to reduce household food
+          waste.
+        </p>
+      </div>
     </div>
     <div class="work-section">
-        <h2>my work!</h2>
-        <div class="work-card">
-            <div class="work-card-header">
-                <div class="work-title">Co-Founder @ Brokol</div>
-                <div class="work-date">Nov '22 - Present</div>
-            </div>
-            <ul class="work-details">
-                <li>On a mission to reduce household food waste</li>
-                <li>Helping ADHDers with their relationship with food</li>
-                <li>Previous idea's beta mobile app gained 350+ user sign ups organically (idea didn't work but learnings were worth it)</li>
-                <a href="src/brokol.html" class="read-more-link">Read the story</a>
-            </ul>
+      <h2>my work!</h2>
+      <div class="work-card">
+        <div class="work-card-header">
+          <div class="work-title">Co-Founder @ Brokol</div>
+          <div class="work-date">Nov '22 - Present</div>
         </div>
-        <div class="work-card">
-            <div class="work-card-header">
-                <div class="work-title">Full Stack Developer Co-op @ CGI</div>
-                <div class="work-date">Jan '24 - August '24</div>
-            </div>
-            <ul class="work-details">
-                <li>BC Education and Child Care (ECC) Team</li>
-                <li>4 months in full stack development</li>
-                <li>4 months in QA in Agile team of 40</li>
-            </ul>
+        <ul class="work-details">
+          <li>On a mission to reduce household food waste</li>
+          <li>Helping ADHDers with their relationship with food</li>
+          <li>
+            Previous idea's beta mobile app gained 350+ user sign ups
+            organically (idea didn't work but learnings were worth it)
+          </li>
+          <a href="src/brokol.html" class="read-more-link">Read the story</a>
+        </ul>
+      </div>
+      <div class="work-card">
+        <div class="work-card-header">
+          <div class="work-title">Full Stack Developer Co-op @ CGI</div>
+          <div class="work-date">Jan '24 - August '24</div>
         </div>
-        <div class="work-card">
-            <div class="work-card-header">
-                <div class="work-title">Software Team @ Marine Design Club</div>
-                <div class="work-date">June '23 - Present</div>
-            </div>
-            <ul class="work-details">
-                <li>Founding team & former software lead at Marine Design Club</li>
-                <li>Building an autonomous underwater vehicle to compete at Robosub</li>
-                <li>Working on ML model to detect objects underwater</li>
-            </ul>
+        <ul class="work-details">
+          <li>BC Education and Child Care (ECC) Team</li>
+          <li>4 months in full stack development</li>
+          <li>4 months in QA in Agile team of 40</li>
+        </ul>
+      </div>
+      <div class="work-card">
+        <div class="work-card-header">
+          <div class="work-title">Software Team @ Marine Design Club</div>
+          <div class="work-date">June '23 - Present</div>
         </div>
-        <div class="work-card">
-            <div class="work-card-header">
-                <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
-                <div class="work-date">Jan '24</div>
-            </div>
-            <ul class="work-details">
-                <li>Built a parking tracker that provides real-time monitoring using a live camera feed</li>
-                <li>Integrated with a user-facing mobile app, updating graphical map in real-time</li>
-                <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
-                <a href="src/details.html" class="read-more-link">Read the story</a>
-            </ul>
+        <ul class="work-details">
+          <li>Founding team & former software lead at Marine Design Club</li>
+          <li>
+            Building an autonomous underwater vehicle to compete at Robosub
+          </li>
+          <li>Working on ML model to detect objects underwater</li>
+        </ul>
+      </div>
+      <div class="work-card">
+        <div class="work-card-header">
+          <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
+          <div class="work-date">Jan '24</div>
         </div>
+        <ul class="work-details">
+          <li>
+            Built a parking tracker that provides real-time monitoring using a
+            live camera feed
+          </li>
+          <li>
+            Integrated with a user-facing mobile app, updating graphical map in
+            real-time
+          </li>
+          <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
+          <a href="src/details.html" class="read-more-link">Read the story</a>
+        </ul>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
