update audio button styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="intro-text">
         <audio id="background-music" src="lift.mp3"></audio>
         <button id="play-button">
-          click here for an enhanced viewing experience
+          click here for an enhanced viewing experience :)
         </button>
         <h2>my elevator intro...</h2>
         <p>
