--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <h2>my elevator intro...</h2>
         <p>
           I'm passionate about solving meaningful problems and making a positive
-          impact through technology. A self starter that loves collaborating! I
-          have a strong technical background with Full Stack developer
-          experience and proficiency in JavaScript, Python and Java. Interested
-          in a career in product management or entrepreneurship. I'm currently
-          building Brokol, a startup on a mission to reduce household food
-          waste.
+          impact through technology. A self starter that loves bringing ideas to
+          life! I have a strong technical background with Full Stack development
+          coop experience. Interested in a career in product management and
+          entrepreneurship. I'm currently building Brokol, a startup on a
+          mission to reduce household food waste.
         </p>
       </div>
     </div>
