update brokol page

--- a/src/brokol.html
+++ b/src/brokol.html
@@ -9,7 +9,54 @@
   <body>
     <div class="brokol-page">
       <h1>Co-Founder @ Brokol</h1>
-      <p>TO BE DONE</p>
+      <img src="./brokol.png" alt="Brokol" class="brokol-image" />
+      <section class="section">
+        <h2>Story So Far</h2>
+        <p>
+          Brokol started with a simple idea to reduce household food waste. We
+          didn't bother doing user interviews and jumped straight into building
+          our visionary product (ppl compare us to the likes of Steve Jobs all
+          the time). We developed an inventory tracker to help people track
+          their food and reduce waste. The idea was an overnight success and we
+          gained 5k beta installs the first week solely through word of mouth.
+          People were practically throwing their money at us. lol just kidding -
+          that was fun to write tho. The app never really gained any traction
+          and we didn't know who our customers were... That was our first and
+          mighty mistake - (very) bad customer discovery.
+        </p>
+        <p>
+          Fortunately a demographic we did stumble upon in the process was
+          individuals with ADHD. We found that they had a unique relationship
+          with food and faced a variety of challenges. We have been exploring
+          this demographic for the past few months (doing better customer
+          discovery) and are working on a new product to help them with their
+          relationship with food. We're excited to see where this new direction
+          takes us.
+        </p>
+      </section>
+      <section class="section">
+        <h2>Where Are We Headed</h2>
+        <p>
+          We don't know yet... Maybe there's a product to be made for ADHDers,
+          maybe not. We're excited to find out.
+        </p>
+        <div class="follow-us">
+          <p>
+            Follow our journey:
+            <a href="https://www.instagram.com/brokol.app/" target="_blank"
+              >Instagram</a
+            >
+            |
+            <a href="https://ca.linkedin.com/company/brokol" target="_blank"
+              >LinkedIn</a
+            >
+          </p>
+        </div>
+      </section>
+      <section class="section">
+        <h2>Gallery</h2>
+        <p>Images to be added soon...</p>
+      </section>
       <a href="../index.html" class="back-link">Back to Portfolio</a>
     </div>
   </body>
