--- a/src/brokol.html
+++ b/src/brokol.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Details - Co-Founder @ Brokol</title>
+    <title>Co-Founder @ Brokol</title>
     <link rel="stylesheet" href="brokol.css" />
   </head>
   <body>
