implement parkview page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             real-time
           </li>
           <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
-          <a href="src/details.html" class="read-more-link">Read the story</a>
+          <a href="src/parkview.html" class="read-more-link">Read the story</a>
         </ul>
       </div>
     </div>
