update styling of home page work cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="landing-page">
-      <h1>hi, i'm Ammaar</h1>
+      <h1>hi, I'm Ammaar</h1>
     </div>
     <div class="description-section">
       <div class="intro-text">
@@ -29,7 +29,7 @@
     </div>
     <div class="work-section">
       <h2>my work!</h2>
-      <div class="work-card">
+      <div class="work-card green-card">
         <div class="work-card-header">
           <div class="work-title">Co-Founder @ Brokol</div>
           <div class="work-date">Nov '22 - Present</div>
@@ -41,10 +41,15 @@
             Previous idea's beta mobile app gained 350+ user sign ups
             organically (idea didn't work but learnings were worth it)
           </li>
-          <a href="src/brokol.html" class="read-more-link">Read the story</a>
+          <button
+            class="read-more-button green-button"
+            onclick="location.href='src/brokol.html'"
+          >
+            Read the story ->
+          </button>
         </ul>
       </div>
-      <div class="work-card">
+      <div class="work-card red-card">
         <div class="work-card-header">
           <div class="work-title">Full Stack Developer Co-op @ CGI</div>
           <div class="work-date">Jan '24 - August '24</div>
@@ -55,7 +60,7 @@
           <li>4 months in QA in Agile team of 40</li>
         </ul>
       </div>
-      <div class="work-card">
+      <div class="work-card blue-card">
         <div class="work-card-header">
           <div class="work-title">Software Team @ Marine Design Club</div>
           <div class="work-date">June '23 - Present</div>
@@ -68,7 +73,7 @@
           <li>Working on ML model to detect objects underwater</li>
         </ul>
       </div>
-      <div class="work-card">
+      <div class="work-card green-card">
         <div class="work-card-header">
           <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
           <div class="work-date">Jan '24</div>
@@ -83,7 +88,12 @@
             real-time
           </li>
           <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
-          <a href="src/parkview.html" class="read-more-link">Read the story</a>
+          <button
+            class="read-more-button green-button"
+            onclick="location.href='src/parkview.html'"
+          >
+            Read the story ->
+          </button>
         </ul>
       </div>
     </div>
