--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="landing-page">
-      <h1>hi, I'm Ammaar</h1>
+      <h1>hi, i'm Ammaar</h1>
     </div>
     <div class="description-section">
       <div class="intro-text">
