implement animation and style adjustments to home page

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <div class="landing-page">
-      <h1>hi, i'm Ammaar</h1>
+      <h1><span class="intro">hi, i'm</span> Ammaar</h1>
     </div>
     <div class="description-section">
       <div class="intro-text">
         <audio id="background-music" src="lift.mp3"></audio>
-        <button id="play-button">
-          click here for an enhanced viewing experience :)
-        </button>
+        <button id="play-button">play elevator music :)</button>
         <h2>my elevator intro...</h2>
         <p>
-          I'm passionate about solving meaningful problems and making a positive
-          impact through technology. A self starter that loves bringing ideas to
-          life! I have a strong technical background with Full Stack development
-          coop experience. Interested in a career in product management and
-          entrepreneurship. I'm currently building Brokol, a startup on a
-          mission to reduce household food waste.
+          I'm passionate about
+          <strong>
+            solving meaningful problems and making a positive impact
+          </strong>
+          through technology. A self starter that loves bringing ideas to life!
+          I have a <strong> strong technical background </strong> with Full
+          Stack development coop experience. Interested in a career in
+          <strong> product management and entrepreneurship. </strong>
         </p>
       </div>
     </div>
