--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="landing-page">
-      <h1><span class="intro">hi, i'm</span> Ammaar</h1>
+      <h1><span class="intro">hi, i'm</span> Ammaar 👋</h1>
     </div>
     <div class="description-section">
       <div class="intro-text">
