add more emojis

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="description-section">
       <div class="intro-text">
         <audio id="background-music" src="lift.mp3"></audio>
-        <button id="play-button">play elevator music :)</button>
-        <h2>my elevator intro...</h2>
+        <button id="play-button">play elevator music 🎵</button>
+        <h2>my elevator intro...🛗</h2>
         <p>
           I'm passionate about
           <strong>
