add even more emojis

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </div>
     </div>
     <div class="work-section">
-      <h2>my work!</h2>
+      <h2>my work👨‍💻</h2>
       <div class="work-card green-card">
         <div class="work-card-header">
           <div class="work-title">Co-Founder @ Brokol</div>
           <div class="work-date">Nov '22 - Present</div>
         </div>
         <ul class="work-details">
-          <li>On a mission to reduce household food waste</li>
+          <li>On a mission to reduce household food waste 🥦🗑️</li>
           <li>Helping ADHDers with their relationship with food</li>
           <li>
             Previous idea's beta mobile app gained 350+ user sign ups
@@ -55,8 +55,8 @@
           <div class="work-date">Jan '24 - August '24</div>
         </div>
         <ul class="work-details">
-          <li>BC Education and Child Care (ECC) Team</li>
-          <li>4 months in full stack development</li>
+          <li>BC Education and Child Care (ECC) Team 📚</li>
+          <li>4 months in Full Stack Development</li>
           <li>4 months in QA in Agile team of 40</li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
           <div class="work-date">June '23 - Present</div>
         </div>
         <ul class="work-details">
-          <li>Founding team & former software lead at Marine Design Club</li>
+          <li>Founding team & former software lead at Marine Design Club 🤖</li>
           <li>
             Building an autonomous underwater vehicle to compete at Robosub
           </li>
@@ -79,13 +79,9 @@
           <div class="work-date">Jan '24</div>
         </div>
         <ul class="work-details">
+          <li>Built a parking tracker that provides real-time monitoring 🚗</li>
           <li>
-            Built a parking tracker that provides real-time monitoring using a
-            live camera feed
-          </li>
-          <li>
-            Integrated with a user-facing mobile app, updating graphical map in
-            real-time
+            Integrated with a user-facing mobile app, updating graphical map
           </li>
           <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
           <button
