--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </div>
     </div>
     <div class="work-section">
-      <h2>my work👨‍💻</h2>
+      <h2>my work 👨‍💻</h2>
       <div class="work-card green-card">
         <div class="work-card-header">
           <div class="work-title">Co-Founder @ Brokol</div>
           <div class="work-date">Nov '22 - Present</div>
         </div>
         <ul class="work-details">
-          <li>On a mission to reduce household food waste 🥦🗑️</li>
+          <li>On a mission to reduce household food waste 🥦</li>
           <li>Helping ADHDers with their relationship with food</li>
           <li>
             Previous idea's beta mobile app gained 350+ user sign ups
