--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="work-date">Nov '22 - Present</div>
         </div>
         <ul class="work-details">
-          <li>On a mission to reduce household food waste 🥦</li>
+          <li>On a mission to reduce household food waste 🍊</li>
           <li>Helping ADHDers with their relationship with food</li>
           <li>
             Previous idea's beta mobile app gained 350+ user sign ups
