--- a/src/parkview.html
+++ b/src/parkview.html
@@ -75,7 +75,7 @@
         <h2>Gallery</h2>
         <p>Images to be added soon...</p>
       </section>
-      <a href="../index.html" class="back-link">Back to Portfolio</a>
+      <a href="../" class="back-link">Back to Portfolio</a>
     </div>
   </body>
 </html>
