update to pitch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="intro-text">
         <audio id="background-music" src="lift.mp3"></audio>
         <button id="play-button">play elevator music 🎵</button>
-        <h2>my elevator intro...🛗</h2>
+        <h2>my elevator pitch...🛗</h2>
         <p>
           I'm passionate about
           <strong>
