update brokol text

--- a/src/brokol.html
+++ b/src/brokol.html
@@ -20,18 +20,18 @@
           their food and reduce waste. The idea was an overnight success and we
           gained 5k beta installs the first week solely through word of mouth.
           People were practically throwing their money at us. lol just kidding -
-          that was fun to write tho. The app never really gained any traction
-          and we didn't know who our customers were... That was our first and
-          mighty mistake - (very) bad customer discovery.
+          that was fun to write tho. The app never gained any meaningful
+          traction and we didn't know WHO we had built the app for... That was
+          our first and mighty mistake - (very) bad customer discovery.
         </p>
         <p>
           Fortunately a demographic we did stumble upon in the process was
           individuals with ADHD. We found that they had a unique relationship
           with food and faced a variety of challenges. We have been exploring
-          this demographic for the past few months (doing better customer
-          discovery) and are working on a new product to help them with their
-          relationship with food. We're excited to see where this new direction
-          takes us.
+          this demographic for the past few months, April - June 2024, (doing
+          better customer discovery) and are working on a new product to help
+          them with their relationship with food. We're excited to see where
+          this new direction takes us.
         </p>
       </section>
       <section class="section">
