--- a/src/parkview.html
+++ b/src/parkview.html
@@ -13,14 +13,13 @@
       <section class="section">
         <h2>What did we do?</h2>
         <p>
-          I wasn't planning to participate in BC Hacks 5, but my friend Omar
-          Ankit convinced me to join him. We ended up winning 1st place with our
-          project ParkView. When deciding what to build, we wanted to steer away
-          from anything related to social networks and focus on creating
-          something valuable on its own. We brainstormed the problems we face in
-          our daily lives and initially considered building an app to help
-          students find study spaces on campus, as it's a nightmare during exam
-          season.
+          I would like to thank my friend Omar Ankit for inviting me to join his
+          team. We ended up winning 1st place with our project ParkView. When
+          deciding what to build, we wanted to steer away from anything related
+          to social networks and focus on creating something valuable on its
+          own. We brainstormed the problems we face in our daily lives and
+          initially considered building an app to help students find study
+          spaces on campus, as it's a nightmare during exam season.
         </p>
         <p>
           While in the library, we discussed the idea with a librarian, who
