--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <div class="landing-page">
       <h1><span class="intro">hi, i'm</span> Ammaar 👋</h1>
+      <!-- Scroll Down Section -->
+      <div class="scroll-down">
+        <span>more stuff below</span>
+        <div class="arrow-down"></div>
+      </div>
     </div>
     <div class="description-section">
       <div class="intro-text">
@@ -27,7 +32,7 @@
         </p>
       </div>
     </div>
-    <div class="work-section">
+    <div id="work-section" class="work-section">
       <h2>my work 👨‍💻</h2>
       <div class="work-card green-card">
         <div class="work-card-header">
