--- a/src/brokol.html
+++ b/src/brokol.html
@@ -17,21 +17,21 @@
           didn't bother doing user interviews and jumped straight into building
           our visionary product (ppl compare us to the likes of Steve Jobs all
           the time). We developed an inventory tracker to help people track
-          their food and reduce waste. The idea was an overnight success and we
-          gained 5k beta installs the first week solely through word of mouth.
-          People were practically throwing their money at us. lol just kidding -
-          that was fun to write tho. The app never gained any meaningful
-          traction and we didn't know WHO we had built the app for... That was
-          our first and mighty mistake - (very) bad customer discovery.
+          their food, get reminders when their food is about to expire and thus
+          REDUCE FOOD WASTE 🤯. The idea was an overnight success and we gained
+          5k beta installs the first week solely through word of mouth. People
+          were practically throwing their money at us. lol just kidding - that
+          was fun to write tho. The app never gained any meaningful traction and
+          we didn't know WHO we had built the app for... That was our first and
+          mighty mistake - (very) bad customer discovery.
         </p>
         <p>
-          Fortunately a demographic we did stumble upon in the process was
+          Fortunately a demographic we did stumble upon in the process were
           individuals with ADHD. We found that they had a unique relationship
           with food and faced a variety of challenges. We have been exploring
-          this demographic for the past few months, April - June 2024, (doing
-          better customer discovery) and are working on a new product to help
-          them with their relationship with food. We're excited to see where
-          this new direction takes us.
+          this demographic since April 2024, (doing better customer discovery)
+          and are working on a new product to help them with their relationship
+          with food. We're excited to see where this new direction takes us.
         </p>
       </section>
       <section class="section">
@@ -55,9 +55,15 @@
       </section>
       <section class="section">
         <h2>Gallery</h2>
-        <p>Images to be added soon...</p>
+        <img src="./brokol1.png" class="brokol-image" />
+        <p>
+          Dec 1 2022 - Screen shot of our native iOS app I built overnight at a
+          hackathon. This is the result of our receipt scanner!
+        </p>
+        <img src="./brokol2.png" class="brokol-image" />
+        <p>Feb 15 2023 - Brokol team presenting at IEEE Tech Industry Night.</p>
       </section>
-      <a href="../" class="back-link">Back to Portfolio</a>
+      <a href="../#work-section" class="back-link">Back to Portfolio</a>
     </div>
   </body>
 </html>
