update img style

--- a/src/brokol.html
+++ b/src/brokol.html
@@ -60,7 +60,7 @@
           Dec 1 2022 - Screen shot of our native iOS app I built overnight at a
           hackathon. This is the result of our receipt scanner!
         </p>
-        <img src="./brokol2.png" class="brokol-image" />
+        <img src="./brokol2.png" class="brokol-image-wide" />
         <p>Feb 15 2023 - Brokol team presenting at IEEE Tech Industry Night.</p>
       </section>
       <a href="../#work-section" class="back-link">Back to Portfolio</a>
