update my work section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ammaar's Portfolio</title>
+    <title>Ammaar Khan</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -67,19 +67,6 @@
       </div>
       <div class="work-card blue-card">
         <div class="work-card-header">
-          <div class="work-title">Software Team @ Marine Design Club</div>
-          <div class="work-date">June '23 - Present</div>
-        </div>
-        <ul class="work-details">
-          <li>Founding team & former software lead at Marine Design Club 🤖</li>
-          <li>
-            Building an autonomous underwater vehicle to compete at Robosub
-          </li>
-          <li>Working on ML model to detect objects underwater</li>
-        </ul>
-      </div>
-      <div class="work-card green-card">
-        <div class="work-card-header">
           <div class="work-title">ParkView @ BC HACKS 5 (1st Place)</div>
           <div class="work-date">Jan '24</div>
         </div>
@@ -90,11 +77,24 @@
           </li>
           <li>Built in under 36 hours with lots of coffee and minimal sleep</li>
           <button
-            class="read-more-button green-button"
+            class="read-more-button blue-button"
             onclick="location.href='src/parkview.html'"
           >
             Read the story ->
           </button>
+        </ul>
+      </div>
+      <div class="work-card green-card">
+        <div class="work-card-header">
+          <div class="work-title">Software Team @ Marine Design Club</div>
+          <div class="work-date">June '23 - Dec '23</div>
+        </div>
+        <ul class="work-details">
+          <li>Founding team & former software lead at Marine Design Club 🤖</li>
+          <li>
+            Building an autonomous underwater vehicle to compete at Robosub
+          </li>
+          <li>Working on ML model to detect objects underwater</li>
         </ul>
       </div>
     </div>
