Add favorite quote section with styling in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
         </ul>
       </div>
     </div>
+    <!-- Favorite Quote Section -->
+    <h2 class="quote-title">my favorite quote</h2>
+    <div class="quote-section">
+      <blockquote>
+        <p>the seats are empty. the theatre is dark. why do you keep acting?</p>
+        <footer>~ Charles Bukowski</footer>
+      </blockquote>
+    </div>
+    <div class="page-footer-space"></div>
     <script src="script.js"></script>
   </body>
 </html>
